# fused-effect-Gossip

./: CHANGELOG.md  Gossip.org  README.org  cabal.project  fused-effect-Gossip.cabal  fused-effect-crdt.cabal  fused-effects-Gossip.cabal
app/: Main.hs
src/: Endpoint.hs  MyLib.hs  NodeAction.hs
src/Gossip/: Network.hs  NodeAction.hs  SI.hs  Shuffle.hs  Types.hs
src/Gossip/SI/: Pull.hs  Push.hs  PushPull.hs
src/Gossip/SIR/: BlindCoin.hs  FeedbackCounter.hs
src/Gossip/Swim/: A.hs  Impl.hs  Test.hs  Type.hs
