cabal-version:      2.4
name:               fused-effects-Gossip
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Gossip.Types
                    , Gossip.NodeAction
                    , Gossip.Shuffle
                    , Gossip.SI.Push
                    , Gossip.SI.Pull
                    , Gossip.SI.PushPull
                    , Gossip.SIR.BlindCoin
                    , Gossip.SIR.FeedbackCounter

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , fused-effects
                    , fused-effects-optics
                    , fused-effects-io-sim
                    , fused-effects-random
                    , vector
                    , random
                    , optics
                    , containers >= 0.6
                    , bytestring >= 0.10
                    , text
                    , stm
                    , io-sim
                    , io-classes

    hs-source-dirs:   src
    default-language: Haskell2010

executable fused-effects-Gossip
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        fused-effects-Gossip

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded

test-suite fused-effects-Gossip-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
